# chatroom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.md  cmake-coverage.cmake  docker-compose.yml  start_dev.sh  vcpkg.json
apps/client/: .env.example  CMakeLists.txt  Main.cpp
apps/client/api/: ConnectorPayload.h  MessageFactory.h  MessageFactoryImpl.cpp  MessageFactoryImpl.h  MessageFactoryImplTest.cpp  MessageFactoryMock.h  MessageHandlerPayload.h  RemoveHandlerError.h  Session.h  SessionImpl.cpp  SessionImpl.h  SessionImplTest.cpp  SessionMock.cpp  SocketConnector.h  SocketConnectorImpl.cpp  SocketConnectorImpl.h  SocketConnectorMock.h
apps/client/config/: ConfigProvider.cpp  ConfigProvider.h  EnvironmentParser.cpp  EnvironmentParser.h
apps/client/config/errors/: MissingEnvironmentVariableError.h
apps/client/core/configProvider/: ConfigProvider.cpp  ConfigProvider.h
apps/client/gui/: MainView.cpp  MainView.h
apps/client/gui/controllers/: LeftColumnController.cpp  LeftColumnController.h  MainController.cpp  MainController.h  MessagesController.cpp  MessagesController.h
apps/client/gui/qml/: LoaderController.cpp  LoaderController.h  LoaderView.qml  MainView.qml  main.qml
apps/client/gui/states/: State.h  StateFactory.cpp  StateFactory.h  StateMachine.cpp  StateMachine.h  StateMachineTest.cpp  StateMock.h
apps/client/gui/views/: MainView.qml
apps/client/storage/: ConversationStorage.cpp  ConversationStorage.h  ConversationStorageTest.cpp  MessageStorage.cpp  MessageStorage.h  MessageStorageTest.cpp
apps/client/types/: Message.cpp  Message.h  MessageTest.cpp  User.cpp  User.h  UserTest.cpp
apps/common/collection/: CMakeLists.txt  StlOperators.h  StringHelper.cpp  StringHelperTest.cpp
apps/common/filesystem/: CMakeLists.txt  FileSystemService.h  FileSystemServiceFactory.cpp  FileSystemServiceFactory.h  FileSystemServiceImpl.cpp  FileSystemServiceImpl.h  FileSystemServiceImplTest.cpp  FileSystemServiceMock.h  GetExecutablePath.cpp  GetExecutablePath.h  GetExecutablePathTest.cpp  GetProjectPath.cpp  GetProjectPath.h  GetProjectPathTest.cpp
apps/common/filesystem/errors/: FileNotFound.h
apps/common/filesystem/testFiles/: testWriting.txt  testWritingAtPosition.txt
apps/common/messages/: CMakeLists.txt  Message.h  MessageId.h  MessageReader.h  MessageReaderImpl.cpp  MessageReaderImpl.h  MessageReaderMock.h  MessageSender.h  MessageSenderImpl.cpp  MessageSenderImpl.h  MessageSenderMock.h  MessageSerializer.h  MessageSerializerImpl.cpp  MessageSerializerImpl.h  MessageSerializerImplTest.cpp
apps/common/messages/errors/: InvalidChecksumError.h
apps/common/utils/: CMakeLists.txt
apps/common/utils/collection/: StringHelper.cpp  StringHelper.h  StringHelperTest.cpp
apps/common/utils/environmentParser/: EnvironmentParser.cpp  EnvironmentParser.h
apps/common/utils/fileSystem/: FileSystemService.h  FileSystemServiceFactory.cpp  FileSystemServiceFactory.h  FileSystemServiceImpl.cpp  FileSystemServiceImpl.h  FileSystemServiceImplTest.cpp  FileSystemServiceMock.h  GetExecutablePath.cpp  GetExecutablePath.h  GetExecutablePathTest.cpp  GetProjectPath.cpp  GetProjectPath.h  GetProjectPathTest.cpp
apps/server/: .env.example  CMakeLists.txt  Main.cpp  TestIntegrationMain.cpp
apps/server/api/: ConnectionAcceptor.h  ConnectionAcceptorImpl.cpp  ConnectionAcceptorImpl.h  ConnectionAcceptorMock.h  MessageHandler.h  MessageHandlerImpl.cpp  MessageHandlerImpl.h  MessageHandlerImplTest.cpp  MessageHandlerMock.h  MessageRouter.h  MessageRouterFactory.cpp  MessageRouterFactory.h  MessageRouterImpl.cpp  MessageRouterImpl.h  MessageRouterImplTest.cpp  MessageRouterMock.h  Session.h  SessionFactory.h  SessionFactoryImpl.cpp  SessionFactoryImpl.h  SessionFactoryImplTest.cpp  SessionFactoryMock.h  SessionImpl.cpp  SessionImpl.h  SessionImplTest.cpp  SessionManager.cpp  SessionManager.h  SessionManagerTest.cpp  SessionMock.h
apps/server/api/MessageHandlers/: AcceptChannelInvitationMessageHandler.cpp  AcceptChannelInvitationMessageHandler.h  AcceptChannelInvitationMessageHandlerTest.cpp  AcceptFriendRequestMessageHandler.cpp  AcceptFriendRequestMessageHandlerTest.cpp  CreateChannelMessageHandler.cpp  CreateChannelMessageHandler.h  CreateChannelMessageHandlerTest.cpp  DeleteTheChannelMessageHandler.cpp  DeleteTheChannelMessageHandler.h  DeleteTheChannelMessageHandlerTest.cpp  DeleteUserMessageHandler.cpp  DeleteUserMessageHandler.h  DeleteUserMessageHandlerTest.cpp  FriendRequestMessageHandler.cpp  FriendRequestMessageHandlerTest.cpp  GetUserChannelInvitationsMessageHandler.cpp  GetUserChannelInvitationsMessageHandler.h  GetUserChannelInvitationsMessageHandlerTest.cpp  GetUserChannelsMessageHandler.cpp  GetUserChannelsMessageHandler.h  GetUserChannelsMessageHandlerTest.cpp  GetUserDataMessageHandler.cpp  GetUserDataMessageHandler.h  GetUserDataMessageHandlerTest.cpp  GetUserFriendRequestsMessageHandler.cpp  GetUserFriendRequestsMessageHandlerTest.cpp  GetUserFriendsMessageHandler.cpp  GetUserFriendsMessageHandler.h  GetUserFriendsMessageHandlerTest.cpp  LeaveChannelMessageHandler.h  LeaveChannelMessageHandlerTest.cpp  LeftTheChannelMessageHandler.cpp  LeftTheChannelMessageHandler.h  LeftTheChannelMessageHandlerTest.cpp  LoginMessageHandler.cpp  LoginMessageHandler.h  LoginMessageHandlerTest.cpp  LogoutMessageHandler.cpp  LogoutMessageHandler.h  (+22 more)
apps/server/api/messageHandlers/: MessageHandler.h  (+39 more)
apps/server/application/: UserRepository.h
apps/server/config/: ConfigProvider.cpp  ConfigProvider.h  EnvironmentParser.cpp  EnvironmentParser.h  custom-environment-variables.json  default.json
apps/server/domain/: User.cpp  User.h
apps/server/infrastructure/: DatabaseConfig.h  DatabaseConnector.cpp  DatabaseConnector.h  UserRepositoryImpl.cpp  UserRepositoryImpl.h
apps/server/scripts/: migrations.sql
apps/server/src/: Address.cpp  Address.hpp  Branch.cpp  Branch.hpp  Customer.cpp  Customer.hpp  Database.cpp  Database.hpp  Date.cpp  Date.hpp  Employee.cpp  Employee.hpp  LicenseClass.cpp  LicenseClass.hpp  Person.cpp  Person.hpp  main.cpp
(+1091 files in other folders)
